# file_engine_core

./: .dockerignore  .env.backup  .gitignore  CLAUDE.md  CMakeLists.txt  CONFIGURATION.md  Containerfile  DOCUMENTATION.md  GEMINI.md  Makefile  PKGBUILD  QWEN.md  README.md  SPECIFICATIONS.md  core.conf  database_architecture.md  debug_path_parsing  debug_path_parsing.cpp  debug_server.sh  fileengine-core.spec  fileengine.logrotate  fileengine.service  fileengine.sysusers  test_acl_roles.sh  test_client.cpp  test_crash_identification  test_crash_identification.cpp  test_default_tenant  test_default_tenant.cpp  test_direct_filesystem  test_direct_filesystem.cpp  test_direct_filesystem_isolated  test_direct_filesystem_isolated.cpp  test_direct_filesystem_ops  test_direct_filesystem_ops.cpp  test_exists_root  test_exists_root.cpp  test_file.txt  test_filesystem_non_empty.cpp  test_filesystem_operations  (+22 more)
.github/workflows/: build-image.yml
backup_working_implementation/: CMakeLists.txt  IDatabase.h  acl_manager.cpp  acl_manager.h  config_loader.cpp  config_loader.h  connection_pool.h  database.cpp  database.h  file_culler.cpp  grpc_service.cpp  grpc_service.h  object_store_sync.cpp  object_store_sync.h  s3_storage.cpp  s3_storage.h  server.cpp  tenant_manager.cpp  tenant_manager.h  types.h
cli/: CMakeLists.txt
cli/include/: logger.h
cli/src/: client_main.cpp  fileengine_cli.cpp  main.cpp.backup
core/: CMakeLists.txt  build_info.h.in
core/include/fileengine/: IDatabase.h  IObjectStore.h  IStorage.h  acl_manager.h  audit_entry.h  audit_sink.h  audit_sink_factory.h  cache_manager.h  config_loader.h  connection_pool.h  connection_pool_manager.h  connection_router.h  crypto_utils.h  database.h  event.h  event_sink.h  event_sink_factory.h  file_culler.h  filesystem.h  grpc_service.h  logger.h  object_store_sync.h  query_builder.h  redis_event_sink.h  rest_server.h  role_manager.h  s3_storage.h  server_logger.h  storage.h  storage_tracker.h  tenant_manager.h  types.h  utils.h
core/src/: acl_manager.cpp  audit_entry.cpp  audit_sink.cpp  audit_sink_factory.cpp  cache_manager.cpp  config_loader.cpp  config_loader.cpp.backup  connection_pool.cpp  connection_pool_manager.cpp  crypto_utils.cpp  database.cpp  event.cpp  event_sink.cpp  event_sink_factory.cpp  file_culler.cpp  filesystem.cpp  grpc_service.cpp  logger.cpp  object_store_sync.cpp  query_builder.cpp  redis_event_sink.cpp  rest_server.cpp  role_manager.cpp  s3_storage.cpp  server.cpp  server_logger.cpp  storage.cpp  storage_tracker.cpp  tenant_manager.cpp  types.cpp  utils.cpp
debian/: changelog  control  copyright  fileengine-cli.install  fileengine-libs.install  fileengine-server-dev.install  fileengine-server.install  fileengine-server.postinst  fileengine-server.postrm  fileengine-server.preinst  fileengine-server.prerm  install  postinst  postrm  prerm  rules
design_documents/: PROPOSAL_2fa_and_webdav_ip_binding.md  REPLICATION_FAILOVER.md  SECURITY_REVIEW_2026-07.md  acl_rbac_review_and_plan.md  cli_self_contained_build_plan.md  file_renditions.md  monitoring_and_telemetry.md  redis_event_queueing_plan.md  rsync_delta_updates.md  usage_logging_and_auditing.md
proto/: fileservice.proto
tests/: CMakeLists.txt  acl_tests.cpp  basic_tests.cpp  cache_tests.cpp  cli_full_integration.sh  crypto_stream_tests.cpp  database_tests.cpp  event_sink_smoke.cpp  file_culler_tests.cpp  filesystem_tests.cpp  object_store_sync_tests.cpp  query_builder_tests.cpp  s3_storage_tests.cpp  s3_tests.cpp  storage_tests.cpp  storage_tracker_tests.cpp  tenant_tests.cpp  test_acl_group_role_permissions.cpp  test_acl_rbac_comprehensive.cpp  test_comprehensive_acl_roles.cpp  test_connection_router.cpp  test_deleted_reachability.cpp  test_role_based_access_scenarios.cpp  test_s3_integration.cpp  test_security_acl.cpp  test_version_selection.cpp  unit_tests.cpp
